--- a/app/src/main/res/layout/activity_server_list.xml
+++ b/app/src/main/res/layout/activity_server_list.xml
@@ -8,7 +8,7 @@
     tools:context=".ServerListActivity">
 <com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="140dp"
     style="@style/CustomCardViewStyle"
     app:cardBackgroundColor="@color/lightBlue"
     android:elevation="10dp"
@@ -76,7 +76,12 @@
     android:layout_margin="20dp"
     android:textSize="20sp"
     android:fontFamily="@font/segoeuibold"/>
-
+    <ImageView
+        android:id="@+id/gifImageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/serverRecyclerView"
         android:layout_width="match_parent"
