--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/AllServers"
-        android:icon="@drawable/location"
+        android:icon="@android:drawable/ic_menu_sort_alphabetically"
         android:title="All Server" />
     <item
-        android:id="@+id/Setting"
-        android:icon="@drawable/setting"
+        android:id="@+id/menuSetting"
+        android:icon="@android:drawable/ic_menu_view"
         android:title="Settings" />
     <item
-        android:id="@+id/About"
-        android:icon="@drawable/about"
+        android:id="@+id/menuAbout"
+        android:icon="@android:drawable/ic_dialog_info"
         android:title="About" />
     <item
-        android:id="@+id/Contactus"
-        android:icon="@drawable/contact"
+        android:id="@+id/menuContactus"
+        android:icon="@android:drawable/stat_sys_speakerphone"
         android:title="Contact Us" />
 </menu>
