--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,9 +8,8 @@
     <style name="Theme.TrueVPN" parent="Base.Theme.TrueVPN" />
 
 
-
     <style name="CustomCardViewStyle" parent="@style/Widget.MaterialComponents.CardView">
-        <item name="shapeAppearanceOverlay" >
+        <item name="shapeAppearanceOverlay">
             @style/ShapeAppearanceOverlay_card_custome_corner
         </item>
     </style>
@@ -23,4 +22,13 @@
         <item name="cornerSizeBottomRight">50dp</item>
 
     </style>
+
+    <style name="Theme.TrueVPN.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.TrueVPN.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.TrueVPN.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
